--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "main": "index.js",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "postinstall": "prisma generate",
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "concurrently \"tsc -w\" \"nodemon -q src/index.ts\"",
+    "migrate:dev": "prisma migrate dev",
+    "migrate:deploy": "prisma migrate deploy",
     "lint:check": "eslint --max-warnings 0 --config .eslintrc .",
     "lint:fix": "eslint --max-warnings 0 --config .eslintrc . --fix",
     "format:fix": "prettier --write \"**/*.{ts,tsx,json}\"",
@@ -14,11 +17,11 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@prisma/client": "5.15.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.19.2",
-    "mongoose": "^8.5.0"
+    "express": "^4.19.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
@@ -32,6 +35,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "nodemon": "^3.1.4",
+    "prisma": "5.15.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   }
