express-postgres-docker

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "postinstall": "prisma generate",
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"tsc -w\" \"nodemon -q src/index.ts\"",
+    "dev": "concurrently \"tsc -w\" \"nodemon src/index.ts\"",
+    "prisma:generate": "prisma generate",
     "migrate:dev": "prisma migrate dev",
     "migrate:deploy": "prisma migrate deploy",
     "lint:check": "eslint --max-warnings 0 --config .eslintrc .",
