--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,6 +8,7 @@ services:
     ports:
       - '3000:3000'
     environment:
+      - NODE_ENV=development
       - PORT=3000
       - DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres?schema=public
     volumes:
